pkg/deps/testdata/ub/manifest/invalid/unknown-require-field.ub
manifest: {
  requires: {
    'github.com/x/y': {
      version: 'v1.2.3'
      pinned:  true
    }
  }
}
